enterprise-platform/enterprise-platform/svc-shipping/k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: shipping
  namespace: ${NAMESPACE}
  labels:
    app: shipping
    env: ${ENVIRONMENT}
spec:
  type: ClusterIP
  selector:
    app: shipping
  ports:
  - name: http
    port: 8080
    targetPort: http
    protocol: TCP
